samples/_failures_safe/1761557483_a492b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3b48fa7.c: In function ‘main’:
./samples/SAFE/__tmp_e3b48fa7.c:176:12: error: missing terminating " character
  176 |     printf("\nTokens
      |            ^~~~~~~~~
./samples/SAFE/__tmp_e3b48fa7.c:176:5: error: expected expression at end of input
  176 |     printf("\nTokens
      |     ^~~~~~
./samples/SAFE/__tmp_e3b48fa7.c:176:5: error: expected declaration or statement at end of input
